update: enhance SEO and social media metadata in index.html; rename project from 'sanny' to 'genfox'

--- a/index.html
+++ b/index.html
@@ -2,18 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Genfox</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- SEO Enhancements -->
+    <title>Genfox - AI Consultancy Solutions for Enterprises</title>
+    <meta name="description" content="Genfox offers AI consultancy services to unlock automation, strategy, and innovation for enterprises. Boost efficiency and gain a competitive edge." />
+    <meta name="keywords" content="Genfox, AI consultancy, enterprise AI solutions, automation, AI strategy, efficiency, innovation, artificial intelligence" />
+    <meta name="author" content="Genfox Team" />
+    <meta name="robots" content="index, follow" />
+    <!-- Open Graph Tags for Social Media -->
+    <meta property="og:title" content="Genfox - AI Consultancy Solutions for Enterprises" />
+    <meta property="og:description" content="Unlock AI’s potential with Genfox. From automation to strategy, we boost efficiency, innovation, and competitiveness for enterprises." />
+    <meta property="og:image" content="https://genfox.ai/logo.png" />
+    <meta property="og:url" content="https://genfox.ai" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Genfox - AI Consultancy Solutions for Enterprises" />
+    <meta name="twitter:description" content="Unlock AI’s potential with Genfox. From automation to strategy, we boost efficiency, innovation, and competitiveness for enterprises." />
+    <meta name="twitter:image" content="https://genfox.ai/logo.png" />
+    <!-- Favicon -->
+    <link rel="canonical" href="https://genfox.ai" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <!-- Preconnect for Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+  </head>
+  <body>
+    <div id="root">
+      <h1>Genfox - AI Consultancy for Enterprises</h1>
+      <p>From automation to AI strategy, we help enterprises unlock AI’s full potential. Boost efficiency, innovation, and competitive edge.</p>
+    </div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
